--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Project ARYAN BOT</title>
+    <title>Project SIDDIK BOT</title>
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
@@ -499,7 +499,7 @@
             </div>
 
             <div class="profile-card__cnt js-profile-cnt">
-                <div class="profile-card__name">ADRIYAN 卝 ARYAN࿐ツ</div>
+                <div class="profile-card__name">SK SIDDIK</div>
                 <div class="profile-card__txt">Admin Project <strong>Goat Bot</strong></div>
                 <div class="profile-card-loc">
                     <svg class="svg-icon" viewBox="0 0 20 20" width=25 height=25>
@@ -524,25 +524,25 @@
 
                 <div class="profile-card-contacts">
 
-                    <a href="https://facebook.com/61566369721724">
+                    <a href="https://facebook.com/100059026788061">
                         <img class="profile-card-contacts facebook"
                             src="https://raw.githubusercontent.com/ntkhang03/resources-goat-bot/master/homepage/facebook.png"
                             width=50 height=50 alt="facebook icon">
                     </a>
 
-                    <a href="https://messenger.com/t/61566369721724">
+                    <a href="https://messenger.com/t/100059026788061">
                         <img class="profile-card-contacts messenger"
                             src="https://raw.githubusercontent.com/ntkhang03/resources-goat-bot/master/homepage/messenger.png"
                             width=50 height=50 alt="messenger icon">
                     </a>
 
-                    <a href="https://www.youtube.com/c/ADRIYAN ARYAN/">
+                    <a href="https://www.youtube.com/c/SK SIDDIK/">
                         <img class="profile-card-contacts youtube"
                             src="https://raw.githubusercontent.com/ntkhang03/resources-goat-bot/master/homepage/youtube.png"
                             width=50 height=50 alt="youtube icon">
                     </a>
 
-                    <a href="https://github.com/ARYAN-BOT-404">
+                    <a href="https://github.com/SK-SIDDIK">
                         <img class="profile-card-contacts github"
                             src="https://raw.githubusercontent.com/ntkhang03/resources-goat-bot/master/homepage/github.jpg"
                             width=50 height=50 alt="github icon">
@@ -555,9 +555,9 @@
                 </div>
 
                 <div class="profile-card-ctr">
-                    <button onclick="location.href='https:\/\/messenger.com\/t\/61566369721724'"
+                    <button onclick="location.href='https:\/\/messenger.com\/t\/100059026788061'"
                         class="profile-card__button button--blue js-message-btn">Message</button>
-                    <button onclick="location.href='https:\/\/facebook.com\/61566369721724'"
+                    <button onclick="location.href='https:\/\/facebook.com\/100059026788061'"
                         class="profile-card__button button--orange">Follow</button>
                 </div>
             </div>
